@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-05-14T08:18:37Z",
+  "timestamp" : "2024-05-23T08:17:13Z",
   "count_outdated" : 82,
   "uniques_outdated" : 64,
-  "count" : 83,
-  "uniques" : 65,
+  "count" : 84,
+  "uniques" : 66,
   "clones" : [
     {
       "timestamp": "2024-05-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
